@@ -19,7 +19,7 @@ Package:
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.8 (OpenPKG-CURRENT)
 
-iEYEARECAAYFAkd7wjQACgkQ0mcr4lELuksBDQCg8LuAQXmvxy9HgI5B1FmAuw23
-HkcAnj8m04N2AAGEwijWtXaUchq/bJOd
-=WKYF
+iEYEARECAAYFAkeIus4ACgkQ4NtEALXQTmsJDACfW4WxxXIZy0OmIZF+3A/AkGnV
+s18AnRmkOZmULuvRnhTkrs/h+BYrT7Tq
+=Scxl
 -----END PGP SIGNATURE-----
