@@ -1,4 +1,5 @@
 5.0.0 -> 5.1a1:
+    - rse: upgrade RPM Lua functions util.rmatch(), util.rsubst() and util.rsplit() to new lrexlib 2.2
     - rse: upgrade the RPM Lua extension lrexlib from ancient version 1.1x to latest version 2.2
     - jbj: permit opt-in network access using %_rpmgio macro.
     - jbj: fix: deny rpmioSlurp network access (like all other Fopen call's).
